# typescript/src/models/ComputationQuota.ts
@@ -1,0 +1,100 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Geo Engine Pro API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.8.0
+ * Contact: dev@geoengine.de
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { OperatorQuota } from './OperatorQuota';
+import {
+    OperatorQuotaFromJSON,
+    OperatorQuotaFromJSONTyped,
+    OperatorQuotaToJSON,
+} from './OperatorQuota';
+
+/**
+ * 
+ * @export
+ * @interface ComputationQuota
+ */
+export interface ComputationQuota {
+    /**
+     * 
+     * @type {string}
+     * @memberof ComputationQuota
+     */
+    computationId: string;
+    /**
+     * 
+     * @type {Array<OperatorQuota>}
+     * @memberof ComputationQuota
+     */
+    operators: Array<OperatorQuota>;
+    /**
+     * 
+     * @type {Date}
+     * @memberof ComputationQuota
+     */
+    timestamp: Date;
+    /**
+     * 
+     * @type {string}
+     * @memberof ComputationQuota
+     */
+    workflowId: string;
+}
+
+/**
+ * Check if a given object implements the ComputationQuota interface.
+ */
+export function instanceOfComputationQuota(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "computationId" in value;
+    isInstance = isInstance && "operators" in value;
+    isInstance = isInstance && "timestamp" in value;
+    isInstance = isInstance && "workflowId" in value;
+
+    return isInstance;
+}
+
+export function ComputationQuotaFromJSON(json: any): ComputationQuota {
+    return ComputationQuotaFromJSONTyped(json, false);
+}
+
+export function ComputationQuotaFromJSONTyped(json: any, ignoreDiscriminator: boolean): ComputationQuota {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'computationId': json['computationId'],
+        'operators': ((json['operators'] as Array<any>).map(OperatorQuotaFromJSON)),
+        'timestamp': (new Date(json['timestamp'])),
+        'workflowId': json['workflowId'],
+    };
+}
+
+export function ComputationQuotaToJSON(value?: ComputationQuota | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'computationId': value.computationId,
+        'operators': ((value.operators as Array<any>).map(OperatorQuotaToJSON)),
+        'timestamp': (value.timestamp.toISOString()),
+        'workflowId': value.workflowId,
+    };
+}
+
