# typescript/src/models/OperatorQuota.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Geo Engine Pro API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.8.0
+ * Contact: dev@geoengine.de
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface OperatorQuota
+ */
+export interface OperatorQuota {
+    /**
+     * 
+     * @type {number}
+     * @memberof OperatorQuota
+     */
+    count: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof OperatorQuota
+     */
+    operatorPath: string;
+}
+
+/**
+ * Check if a given object implements the OperatorQuota interface.
+ */
+export function instanceOfOperatorQuota(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "count" in value;
+    isInstance = isInstance && "operatorPath" in value;
+
+    return isInstance;
+}
+
+export function OperatorQuotaFromJSON(json: any): OperatorQuota {
+    return OperatorQuotaFromJSONTyped(json, false);
+}
+
+export function OperatorQuotaFromJSONTyped(json: any, ignoreDiscriminator: boolean): OperatorQuota {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'count': json['count'],
+        'operatorPath': json['operatorPath'],
+    };
+}
+
+export function OperatorQuotaToJSON(value?: OperatorQuota | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'count': value.count,
+        'operatorPath': value.operatorPath,
+    };
+}
+
