# typescript/src/models/index.ts
@@ -17,6 +17,7 @@ export * from './CollectionType';
 export * from './ColorParam';
 export * from './ColorParamStatic';
 export * from './Colorizer';
+export * from './ComputationQuota';
 export * from './ContinuousMeasurement';
 export * from './Coordinate2D';
 export * from './CreateDataset';
@@ -102,6 +103,7 @@ export * from './OgrSourceTimeFormat';
 export * from './OgrSourceTimeFormatAuto';
 export * from './OgrSourceTimeFormatCustom';
 export * from './OgrSourceTimeFormatUnixTimeStamp';
+export * from './OperatorQuota';
 export * from './OrderBy';
 export * from './PaletteColorizer';
 export * from './Permission';
